--- a/webapp/manageProperty.html
+++ b/webapp/manageProperty.html
@@ -453,6 +453,7 @@
           processGet();
       }
   </script>
+    </head>
 <body>
   <nav class="navbar navbar-expand-md bg-primary navbar-dark">
     <div class="container">
