--- a/webapp/addNewProperty.html
+++ b/webapp/addNewProperty.html
@@ -265,7 +265,7 @@
                 </div>
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
-                  <button type="reset" class="btn btn-primary" onclick="clean()">Cancel </button>
+                  <a class="btn btn-primary" href="loginhome.html">Cancel </a>
                 </div>
               </div>
               <br>
