added buttons for back

--- a/admin/confirmedProp.html
+++ b/admin/confirmedProp.html
@@ -363,6 +363,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </div>
+    <div class="py-2">
+                <button class="btn ml-2 text-white btn-primary">
+                    <span style="background-color: rgb(18, 187, 173);">Search Properties</span>
+                </button>
+                <button class="btn ml-2 text-white btn-primary">Manage Selected Property</button>
+                <button class="btn ml-2 text-white btn-primary">Back</button>
+            </div>
  
 </body>
 
