--- a/webapp/visitorsignup.html
+++ b/webapp/visitorsignup.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
   <script src="js/md5.min.js"></script>
-  <script> 
+  <script>
   // let payload = {
   //  "email": "test2@harvard.edu",
   //  "username": "testUser2",
@@ -68,6 +68,11 @@
             xhr.send(JSON.stringify(payload));
       }
 
+      function logout(){
+                console.log("Going back to log in page")
+                window.location.replace("../login.html")
+            }
+
   </script>
 
 <body>
@@ -107,11 +112,13 @@
             <div class="form-group">
               <input id="email" type="email" class="form-control"placeholder="*Enter email"> </div>
             <div class="form-group">
-              <input id="password" type="password" class="form-control" placeholder="*New password"> 
+              <input id="password" type="password" class="form-control" placeholder="*New password">
               <input id="confirm_password" type="password" class="form-control" placeholder="*Confirm password"> </div>
             <button type="submit" class="btn btn-primary" onclick="insertUser()">Create Account</button>
-            <button type="reset" class="btn btn-primary" onclick="clean()">Clear </button>
-          
+            <button class="btn btn-secondary ml-2 text-white" onclick="logout()">
+           Cancel
+            </button>
+
         </div>
       </div>
     </div>
