fixed cancel button

--- a/admin/manageProperty.html
+++ b/admin/manageProperty.html
@@ -574,7 +574,7 @@
                   <button  class="btn btn-primary" onclick="deleteProperty()">Delete Property</button>
                 </div>
                 <div class="col-md-4">
-                  <button type="reset" class="btn btn-primary"><a href = "adminhome.html" onclick="goBack()" >Cancel</a> </button>
+                  <button type="reset" class="btn btn-primary"><a href = "adminhome.html" onclick="goBack()" class="text-white">Cancel</a> </button>
                 </div>
               </div>
              
