Fixed some links issues and cookie eating

--- a/webapp/loginhome.html
+++ b/webapp/loginhome.html
@@ -382,8 +382,10 @@
 }
 
         function logout(){
+            Cookies.clear("email");
+            Cookies.clear("type");
             console.log("Going back to log in page")
-            window.location.replace("../login.html")
+            window.location.replace("login.html")
             }
 
   </script>
