--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -5,46 +5,49 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
         <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css">
+        <script src="js/Cookies.js"></script>
         <script>
             function changeWindowViewVisitor(){
                 console.log("Replacing Window")
-                window.location.replace("visitorlist.html");
+                window.location.href = "visitorlist.html";
 
             }
 
             function changeWindowViewOwners(){
                 console.log("Replacing Window")
-                window.location.replace("ownerlist.html");
+                window.location.href = "ownerlist.html";
 
             }
 
             function changeWindowConProperties(){
                 console.log("Replacing Window")
-                window.location.replace("confirmedProp.html");
+                window.location.href = "confirmedProp.html";
 
             }
 
             function changeWindowUnProperties(){
                 console.log("Replacing Window")
-                window.location.replace("unconfirmedProp.html");
+                window.location.href = "unconfirmedProp.html";
 
             }
 
             function changeWindowViewApp(){
                 console.log("Replacing Window")
-                window.location.replace("approvedcrops.html");
+                window.location.href = "approvedcrops.html";
 
             }
 
             function changeWindowViewPend(){
                 console.log("Replacing Window")
-                window.location.replace("pendingcrops.html");
+                window.location.href = "pendingcrops.html";
 
             }
 
             function logout(){
+                Cookies.clear("email");
+                Cookies.clear("type");
                 console.log("Going back to log in page")
-                window.location.replace("../login.html")
+                window.location.href = "/login.html";
             }
 
 
@@ -59,7 +62,7 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </button>
                 <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
                     <form class="btn navbar-btn ml-2 text-white fa d-inline btn-primary">
-                        <a class="btn navbar-btn ml-2 text-white btn-secondary" href="login.html" onclick="logout()"> <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
+                        <a class="btn navbar-btn ml-2 text-white btn-secondary" onclick="logout()"> <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
                     </form>
                 </div>
             </div>
