--- a/admin/adminhome.html
+++ b/admin/adminhome.html
@@ -47,7 +47,7 @@
                 Cookies.clear("email");
                 Cookies.clear("type");
                 console.log("Going back to log in page")
-                window.location.href = "/login.html";
+                window.location.href = "../login.html";
             }
 
 
