--- a/webapp/visitorsignup.html
+++ b/webapp/visitorsignup.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
+  <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> 
   <script src="js/md5.min.js"></script>
   <script>
   // let payload = {
@@ -59,7 +59,7 @@ function validateEmail() {
         if (emailcomments) {
             $("#emailcomments").remove();
         }
-        emailval = true;
+        emailval = false;
     }
 
 }
@@ -118,7 +118,7 @@ function validateEmail() {
             }
 
   </script>
-
+</head>
 <body>
   <nav class="navbar navbar-expand-md bg-primary navbar-dark">
     <div class="container">
