--- a/webapp/loginhome.html
+++ b/webapp/loginhome.html
@@ -434,13 +434,15 @@
           </div>
         <table id="table"></table>
       </div>
+        <br><br>
       <div class="row">
+          
         <div class="col-md-12">
           <a class="btn btn-primary" href="viewotherprop.html">View other properties </a>
+        &nbsp&nbsp
+          <a class="btn btn-primary" href="addNewProperty.html">Add new properties </a>
         </div>
       </div>
-      <a href="viewotherprop.html">View other properties</a>
-      <a href="addNewProperty.html">Add property</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
