--- a/webapp/loginhome.html
+++ b/webapp/loginhome.html
@@ -397,7 +397,7 @@
             Cookies.clear("email");
             Cookies.clear("type");
             console.log("Going back to log in page")
-            window.location.replace("login.html")
+            window.location.href = "../login.html"
             }
 
   </script>
@@ -413,7 +413,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </button>
       <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
         <form class="btn navbar-btn ml-2 text-white fa d-inline btn-primary">
-          <a class="btn navbar-btn ml-2 text-white btn-secondary" href="login.html" onclick="logout()"> <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
+          <a class="btn navbar-btn ml-2 text-white btn-secondary" onclick="logout()"> <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
         </form>
       </div>
     </div>
@@ -421,7 +421,7 @@
   <div class="py-5">
     <div class="container">
       <div>
-        <div style="font-size: 50px"> Welcome Back! User </div>
+        <div style="font-size: 50px"> Welcome Back!</div>
         <br>
         <br>
         <div class="row">
