--- a/webapp/visitorHome.html
+++ b/webapp/visitorHome.html
@@ -189,7 +189,7 @@
                         /////////////
 
                         var cell = document.createElement("td");
-                        var public = propertyArray[j].isPublic;
+                        var public = propertyArray[j].IsPublic;
                         var cellText = null;
                         if(public === 1){
                             cellText = document.createTextNode("True");
@@ -202,7 +202,7 @@
 
                         /////////////////
                          var cell = document.createElement("td");
-                        var public = propertyArray[j].isPublic;
+                        var public = propertyArray[j].IsCommercial;
                         var cellText = null;
                         if(public === 1){
                             cellText = document.createTextNode("True");
@@ -399,7 +399,7 @@ function logout(){
         <br>
         <div class="row">
           <div class="form-group ">
-            <font size="5px">Your Properties: </font> &nbsp; </div>
+            <font size="5px">Public Properties: </font> &nbsp; </div>
         </div>
           <div><i style="font-size:24px" class="fa">&#xf002;</i><input type="text" id="myInput" onkeyup="searchFunc()" placeholder="Search for names..">
 
@@ -408,9 +408,7 @@ function logout(){
         <table id="table"></table>
       </div>
       <div class="row">
-        <div class="col-md-12">
-          <a class="btn btn-primary" href="viewotherprop.html">View other properties </a>
-        </div>
+      
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
