--- a/webapp/visitorHome.html
+++ b/webapp/visitorHome.html
@@ -38,6 +38,11 @@
 }
   </style>
     <script>
+    function logout(){
+            console.log("Going back to log in page")
+            window.location.href("../login.html")
+            }
+      
     function listProperties(propertyArray) {
   
           console.log("listing prop")
@@ -384,8 +389,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </button>
       <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
         <form class="btn navbar-btn ml-2 text-white fa d-inline btn-primary">
-          <a class="btn navbar-btn ml-2 text-white btn-secondary">
-            <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
+          <a class="btn navbar-btn ml-2 text-white btn-secondary" href="login.html" onclick="logout()"> <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
         </form>
       </div>
     </div>
