--- a/webapp/visitorHome.html
+++ b/webapp/visitorHome.html
@@ -40,7 +40,7 @@
     <script>
     function logout(){
             console.log("Going back to log in page")
-            window.location.href("../login.html")
+            window.location.href="../login.html"
             }
       
     function listProperties(propertyArray) {
