--- a/admin/manageProperty.html
+++ b/admin/manageProperty.html
@@ -152,7 +152,7 @@
                     if (data != "0") {
                             //window.location.replace("webapp/loginhome.html");
                         console.log("Completed");
-                        window.location.replace("loginhome.html");
+                        window.location.href = "adminhome.html"
                     }
                 }
 
@@ -192,7 +192,6 @@
                     //propertyArray = JSON.parse(data);
 
                     if (data != "0") {
-                            //window.location.replace("webapp/loginhome.html");
                         console.log("Completed");
                     }
                 }
@@ -222,6 +221,7 @@
                     if (data != "0") {
                             //window.location.replace("webapp/loginhome.html");
                         console.log("Completed");
+                        window.location.href="adminhome.html"
                     }
                 }
 
