--- a/webapp/addNewProperty.html
+++ b/webapp/addNewProperty.html
@@ -122,6 +122,7 @@
       }
 
      function getCrops(type) {
+         console.log("type = " + type)
          let payload = {
                "type": "crop",
                "confirmed": 1
