--- a/webapp/visitorPropView.html
+++ b/webapp/visitorPropView.html
@@ -655,14 +655,14 @@
               <div class="row">
                 <div class="col-md-4">
                   <p>Public</p>
-                  <select id="public_dropdown">
+                  <select disabled ="true" id="public_dropdown">
                     <option value="0">False</option>
                     <option value="1">True</option>
                   </select>
                   </div>
                 <div class="col-md-4">
                   <p>Commercial</p>
-                  <select id="commercial_dropdown">
+                  <select disabled ="true" id="commercial_dropdown">
                     <option value="0">False</option>
                     <option value="1">True</option>
                   </select>
@@ -693,7 +693,7 @@
                   <button id="unlog" class="btn btn-primary"  onClick="unLogVisit()"><a >Unlog Visit</a> </button>
                 </div>
                 <div class="col-md-4">
-                  <button type="reset" class="btn btn-primary"><a href = "visitorHome.html">Cancel</a> </button>
+                  <a type="reset" href="visitorHome.html" class="btn btn-primary">Cancel</a>
                 </div>
               </div>
              
