--- a/webapp/visitorsignup.html
+++ b/webapp/visitorsignup.html
@@ -79,7 +79,7 @@ function validateEmail() {
           }
 
           let payload = {
-            "email": document.getElementById("email").value,
+            "email": document.getElementById("emailSignUp").value,
             "username": document.getElementById("username").value,
             "password": md5(document.getElementById("password").value),
             "type" : "Visitor",
@@ -102,8 +102,10 @@ function validateEmail() {
                   var data = xhr.responseText;
                   console.log("This is data" + data);
 
-                  if (data != "0") {
-                      window.location.replace("../login.html");
+                  if (data == "1") {
+                      window.location.href= "../login.html"
+                  } else {
+                      alert("email or username already used")
                   }
                 }
 
