--- a/admin/pendingcrops.html
+++ b/admin/pendingcrops.html
@@ -189,11 +189,7 @@
             <div class="pg-empty-placeholder"></div>                          
 
             <div class="py-2">
-                <button class="btn ml-2 text-white btn-primary">
-                    <span style="background-color: rgb(18, 187, 173);">Approve Selection</span>
-                </button>
-                <button class="btn ml-2 text-white btn-primary">Delete Selection</button>
-                <button class="btn ml-2 text-white btn-primary">Back</button>
+                <a class="btn ml-2 text-white btn-primary" href="adminhome.html">Back</a>
             </div>
         </div>         
 
@@ -202,9 +198,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>         
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>         
-
-        <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:180px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo&nbsp;&nbsp;
-            <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
-        </pingendo>         
+     
     </body>
 </html>
