--- a/webapp/loginhome.html
+++ b/webapp/loginhome.html
@@ -190,7 +190,7 @@
                         /////////////
 
                         var cell = document.createElement("td");
-                        var public = propertyArray[j].isPublic;
+                        var public = propertyArray[j].IsPublic;
                         var cellText = null;
                         if(public === 1){
                             cellText = document.createTextNode("True");
@@ -203,7 +203,7 @@
 
                         /////////////////
                          var cell = document.createElement("td");
-                        var public = propertyArray[j].isPublic;
+                        var public = propertyArray[j].IsCommercial;
                         var cellText = null;
                         if(public === 1){
                             cellText = document.createTextNode("True");
