--- a/webapp/manageProperty.html
+++ b/webapp/manageProperty.html
@@ -451,6 +451,7 @@
       window.onload = function() {
           getAnimals();
           processGet();
+          checkLogin();
       }
   </script>
     </head>
