--- a/webapp/visitorHome.html
+++ b/webapp/visitorHome.html
@@ -37,6 +37,7 @@
     background-color: #f1f1f1;
 }
   </style>
+  <script src="js/Cookies.js"></script>
     <script>
     function logout(){
             console.log("Going back to log in page")
@@ -376,6 +377,13 @@
     } 
   }
 }
+      function logout(){
+                Cookies.clear("email");
+                Cookies.clear("type");
+                console.log("Going back to log in page")
+                window.location.href = "../login.html";
+            }
+      
   </script>
 </head>
 
@@ -389,8 +397,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </button>
       <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
         <form class="btn navbar-btn ml-2 text-white fa d-inline btn-primary">
-          <a class="btn navbar-btn ml-2 text-white btn-secondary">
-            <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
+          <a class="btn navbar-btn ml-2 text-white btn-secondary" onclick="logout()"> <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
         </form>
       </div>
     </div>
