back button and deleted logout

--- a/admin/unconfirmedProp.html
+++ b/admin/unconfirmedProp.html
@@ -336,8 +336,6 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </button>
       <div class="collapse navbar-collapse text-center justify-content-end" id="navbar2SupportedContent">
         <form class="btn navbar-btn ml-2 text-white fa d-inline btn-primary">
-          <a class="btn navbar-btn ml-2 text-white btn-secondary">
-            <i class="fa d-inline fa-lg fa-user-circle-o"></i> Log out</a>
         </form>
       </div>
     </div>
@@ -365,7 +363,7 @@
   </div>
     
   <div class="py-2">
-                <button class="btn ml-2 text-white btn-primary">Back</button>
+                <a class="btn ml-2 text-white btn-primary" href= "adminhome.html">Back</a>
   </div>
     
  
