--- a/webapp/visitorPropView.html
+++ b/webapp/visitorPropView.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
   <script src="js/Cookies.js"></script>
   <script>
+      function pad(n, width, z) {
+        z = z || '0';
+        n = n + '';
+        return n.length >= width ? n : new Array(width - n.length + 1).join(z) + n;
+      }
       current_item_list = [];
 
       function logItem(item) {
@@ -210,7 +215,7 @@
           Commercial = property_info.IsCommercial;
           Items = property_info.IName;
 
-          document.getElementById("id_text").innerHTML = "ID: " + ID;
+          document.getElementById("id_text").innerHTML = "ID: " + pad(ID, 5);
           document.getElementById("name").value = Name;
           document.getElementById("address").value = Address;
           document.getElementById("size").value = Size;
