--- a/admin/unconfirmedProp.html
+++ b/admin/unconfirmedProp.html
@@ -38,6 +38,12 @@
 }
   </style>
     <script>
+      function pad(n, width, z) {
+      z = z || '0';
+      n = n + '';
+      return n.length >= width ? n : new Array(width - n.length + 1).join(z) + n;
+    }
+
     function listProperties(propertyArray) {
   
           console.log("listing prop")
@@ -121,7 +127,7 @@
                         var row = document.createElement("tr");
                         var cell = document.createElement("td");    
                         ID = propertyArray[j].ID
-                        var cellText = document.createTextNode(propertyArray[j].ID); 
+                        var cellText = document.createTextNode(pad(propertyArray[j].ID, 5)); 
                         cell.appendChild(cellText);
                         row.appendChild(cell);
 
@@ -365,7 +371,7 @@
   </div>
     
   <div class="py-2">
-                <button class="btn ml-2 text-white btn-primary">Back</button>
+                <a href='adminhome.html' class="btn ml-2 text-white btn-primary">Back</a>
   </div>
     
  
