--- a/webapp/viewotherprop.html
+++ b/webapp/viewotherprop.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css">
   <script>
+    function pad(n, width, z) {
+      z = z || '0';
+      n = n + '';
+      return n.length >= width ? n : new Array(width - n.length + 1).join(z) + n;
+    }
     function listProperties(propertyArray) {
   
           console.log("listing prop")
@@ -110,7 +115,7 @@
                         var row = document.createElement("tr");
                         var cell = document.createElement("td");    
                         ID = propertyArray[j].ID
-                        var cellText = document.createTextNode(propertyArray[j].ID); 
+                        var cellText = document.createTextNode(pad(propertyArray[j].ID); 
                         cell.appendChild(cellText);
                         row.appendChild(cell);
 
