--- a/webapp/visitorHome.html
+++ b/webapp/visitorHome.html
@@ -38,6 +38,12 @@
 }
   </style>
     <script>
+    function pad(n, width, z) {
+      z = z || '0';
+      n = n + '';
+      return n.length >= width ? n : new Array(width - n.length + 1).join(z) + n;
+    }
+
     function logout(){
             console.log("Going back to log in page")
             window.location.href="../login.html"
@@ -145,7 +151,7 @@
                         var row = document.createElement("tr");
                         var cell = document.createElement("td");    
                         ID = propertyArray[j].ID
-                        var cellText = document.createTextNode(propertyArray[j].ID); 
+                        var cellText = document.createTextNode(pad(propertyArray[j].ID, 5)); 
                         cell.appendChild(cellText);
                         row.appendChild(cell);
 
