Back button has white text

--- a/webapp/visitHistory.html
+++ b/webapp/visitHistory.html
@@ -239,7 +239,7 @@
           
           <br>
           <div class="col-md-4">
-                  <button type="reset" class="btn btn-primary"><a href = "visitorHome.html">Back</a> </button>
+                  <button type="reset" class="btn btn-primary text-white"><a href = "visitorHome.html">Back</a> </button>
             </div>
       </div>
       
