--- a/webapp/ownersignup.html
+++ b/webapp/ownersignup.html
@@ -139,6 +139,8 @@ function validateEmail() {
           }
 
           console.log(animal_dropdown);
+
+          getCrops(type); 
       }
 
       function getAnimals() {
@@ -186,42 +188,53 @@ function validateEmail() {
           xhr.send(JSON.stringify(payload));
       }
 
-      function getCrops() {
-          let payload = {
-              "type": "crop",
-              "confirmed": 1
+      function getCrops(type) {
+         console.log("type = " + type)
+         let payload = {
+               "type": "crop",
+               "confirmed": 1
+            }
+         if(type == "Farm"){
+            payload = {
+               "type": "crop",
+               "confirmed": 1
+            }
+          } else if( type == "Orchard"){
+              payload = {
+               "type": "orchard",
+               "confirmed": 1
+            }
           }
-
+          else if( type == "Garden"){
+              payload = {
+               "type": "garden",
+               "confirmed": 1
+            }
+          }
           var xhr = new XMLHttpRequest();
               xhr.onload = () => {
               var data = xhr.responseText;
-
               var cropArray = JSON.parse(data);
               console.log("This is data" + cropArray);
-
               // *******************************************************************
               // ************* Move this when we figure out async stuff ************
               // *******************************************************************
               var crop_dropdown = document.getElementById("crop_dropdown");
-
+              crop_dropdown.options.length = 0;
               for (var i = 0; i < cropArray.length; i++) {
-                var node = document.createElement("option");
+                var node = document.createElement("option");          
                 node.text = cropArray[i].Name;
                 node.setAttribute("value", cropArray[i].Name);
-
                 crop_dropdown.add(node);
               }
-
               // *******************************************************************
               // *********** End Move this *****************************************
               // *******************************************************************
-
               if (data != "0") {
                          //window.location.replace("webapp/loginhome.html");
                   console.log("Completed");
               }
           }
-
           xhr.open("POST", "http://localhost:3000/items", true);
           xhr.setRequestHeader("Content-Type", 'application/json');
           xhr.send(JSON.stringify(payload));
@@ -234,7 +247,7 @@ function validateEmail() {
   //}
 
           getAnimals();
-          getCrops();
+          getCrops("Farm");
       }
   </script>
 
