--- a/webapp/visitorHome.html
+++ b/webapp/visitorHome.html
@@ -426,7 +426,7 @@
           
           <br>
           <div class="col-md-4">
-                  <button type="reset" class="btn btn-secondary"><a href = "visitHistory.html">My Visits</a> </button>
+                  <button type="reset" class="btn btn-secondary"><a class="text-white" href = "visitHistory.html">My Visits</a> </button>
 
             </div>
       </div>
