--- a/webapp/manageProperty.html
+++ b/webapp/manageProperty.html
@@ -623,7 +623,7 @@
                   <button  class="btn btn-primary" onclick="deleteProperty()">Delete Property</button>
                 </div>
                 <div class="col-md-4">
-                  <button type="reset" class="btn btn-primary"><a href = "loginhome.html" onclick="goBack()" >Cancel</a> </button>
+                  <button type="reset" class="btn btn-primary"><a class="text-white" href = "loginhome.html" onclick="goBack()" >Cancel</a> </button>
                 </div>
               </div>
              
