--- a/webapp/visitorHome.html
+++ b/webapp/visitorHome.html
@@ -396,9 +396,7 @@
     
   var low = document.getElementById("lowbound").value;
   var high  = document.getElementById("highbound").value
-    if(document.getElementById("lowbound").value=="" || document.getElementById("highbound").value ==""){
-        return;
-    }
+   
 
   var input, filter, table, tr, td, i;
   input = document.getElementById("myInput");
@@ -410,7 +408,12 @@
 
   // Loop through all table rows, and hide those who don't match the search query
   if(n == 10 || n== 11){
-        
+          if(document.getElementById("lowbound").value=="" || document.getElementById("highbound").value ==""){
+        low = 0;
+    }
+     if(document.getElementById("highbound").value ==""){
+        high = 999;
+    }
         for (i = 0; i < tr.length; i++) {
             td = tr[i].getElementsByTagName("td")[n];
             if (td && td.innerHTML !="N/A") {
